--- a/BottomSheetSample/BottomSheetSample/BottomSheetSample.csproj
+++ b/BottomSheetSample/BottomSheetSample/BottomSheetSample.csproj
@@ -62,8 +62,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.70" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
-		<PackageReference Include="Syncfusion.Maui.ListView" Version="29.2.4" />
-		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.0.4" />
+		<PackageReference Include="Syncfusion.Maui.ListView" Version="*" />
+		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="*" />
 	</ItemGroup>
 
 	<ItemGroup>
